--- a/Front-end/hackathon.html
+++ b/Front-end/hackathon.html
@@ -17,7 +17,7 @@
   <footer class="footer">
     <div class="footer-content">
       <p class="footer-text">Hackathon</p>
-      <p class="footer-text"><span class="hackathon-year">2022</span> - <span class="hackathon-year">2023</span></p>
+      <p class="footer-text"><span class="hackathon-year">2022</span> - <span class="hackathon-year">2023</span> &copy Copyright  Tous droits réservés </p>
     </div>
   </footer>
 
