--- a/Front-end/hackathon.html
+++ b/Front-end/hackathon.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <nav class="navbar">
-      <a class="navbar-logo" href="#"></a>
+      <a class="navbar-logo" href="#">Cyna</a>
     </nav>
     <div class="container">
       <h1>Interface utilisateur</h1>
