--- a/Front-end/hackathon.html
+++ b/Front-end/hackathon.html
@@ -16,12 +16,13 @@
     </div>
     <footer class="footer">
       <div class="footer-content">
-        <p class="footer-text">Hackathon</p>
-        <p class="footer-text">
+        <span class="footer-text">Hackathon </span>
           <span class="hackathon-year">2022</span> -
-          <span class="hackathon-year">2023</span> &copy Copyright Tous droits
+          <span class="hackathon-year">2023</span>  
+        <br>
+         &copy Copyright Tous droits
           réservés
-        </p>
+          
       </div>
     </footer>
 
